# timeline-extraction

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/te-prepared-data/: multi-te3-platinum.csv
data/training-data/: aquaint-train.csv  te3-platinum-train.csv  timebank-train.csv
data/trc-prepared-data/: AQUAINT.csv  te3-platinum.csv
examples/: cli_usage_examples.md  elegant_pipeline_usage.py
full_temporal_relation/: cli.py  create_complex_cycles.py  graph.py  graph_cycles_breaker.py  metrics.py  pipeline.py  tokens_counter.py
full_temporal_relation/data/: count_graph_links.py  postprocessing.py  preprocessing.py  tml_parser.py
full_temporal_relation/models/: HuggingFaceClient.py  LLModel.py  OpenAIClient.py  TogetherAIClient.py  gemini.py  llama.py  llama3.py
full_temporal_relation/prompts/: Prompt.py
full_temporal_relation/visualization/: data.py  graph.py
notebooks/: EDA.ipynb  Prepare-Dataset.ipynb  Prompt-Evaluation.ipynb  data-contradictions.ipynb  llama-playgroung.ipynb  model-preformance-analysis.ipynb  models-comperisons-results.ipynb  models-comperisons.ipynb  prepare-dataset-for-llm.ipynb  raw-text-extraction.ipynb
tests/: __init__.py  test_cli.py  test_data_preprocessing.py  test_parsers.py
timeline_extraction/: cli.py  config.py  create_complex_cycles.py  exceptions.py  graph.py  graph_cycles_breaker.py  metrics.py  pipeline.py  tokens_counter.py  utils.py
timeline_extraction/data/: count_graph_links.py  postprocessing.py  preprocessing.py  tml_parser.py
timeline_extraction/models/: HuggingFaceClient.py  LLModel.py  OpenAIClient.py  TogetherAIClient.py  gemini.py  llama.py  llama3.py
(+66 files in other folders)
