[project]
name = "full-temporal-relation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "beautifulsoup4",
    "matplotlib",
    "transformers",
    "networkx",
    "lxml",
    "google-generativeai",
    "tiktoken",
    "scikit-learn",
    "ruff>=0.11.2",
]
